CS_SBOX_20150209_01/Metadata/unpackaged/objects/fw1__Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_to_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed to GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <description>Captures the Date that the Invoice was Voided</description>
        <label>Void Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <inlineHelpText>Reason for voiding the invoice</inlineHelpText>
        <label>Void Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Age__c</fullName>
        <formula>IF( fw1__Installment_Count__c &gt; 0, 
     fw1__Current_Installment_Age__c , 
     IF( fw1__Balance_Due__c  &gt; 0,  
          IF(TODAY() &gt; fw1__Due_Date__c, 
               ROUND(TODAY() - fw1__Due_Date__c,0), 
               0) , 
          0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Alternate_Invoice_Number__c</fullName>
        <label>External Invoice Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Authorized_Amount__c</fullName>
        <label>Authorized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Balance_Due__c</fullName>
        <formula>fw1__Total_Invoice_Amount__c  -  fw1__Total_Paid_Amount__c -  fw1__Authorized_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Period__c</fullName>
        <label>Billing Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Cleared_For_Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared For Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.fw1__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Credit_Card_Failure_Reason__c</fullName>
        <label>Credit Card Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Current_Installment_Age__c</fullName>
        <formula>IF(TODAY() &gt;  fw1__Current_Installment_Due_Date__c, 
     ROUND(TODAY() - fw1__Current_Installment_Due_Date__c, 0),
     0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Installment Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Current_Installment_Due_Date__c</fullName>
        <label>Current Installment Due Date</label>
        <summarizedField>fw1__Installment__c.fw1__Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>fw1__Installment__c.fw1__Balance_Due__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Delinquent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delinquent (OBSOLETE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Do_Not_Store_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Store Credit Card/Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fw1__Due_Installment_Amount__c</fullName>
        <description>Note: this field is for internal use only and should not be used on reports.</description>
        <label>Due Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Email_CC_Recipients__c</fullName>
        <label>CC Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Currency_Symbol__c</fullName>
        <label>Email Currency Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Footer__c</fullName>
        <label>Email Footer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Message__c</fullName>
        <label>Email Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether invoice has been emailed.</description>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Email_me_a_copy_of_invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email me a copy of invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Enter_Down_Payment_In__c</fullName>
        <label>Enter Down Payment In</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__From_Email_Address_Id__c</fullName>
        <label>From Email Address Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Installment_Count__c</fullName>
        <label>Installment Count</label>
        <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Installment_Fee__c</fullName>
        <label>Installment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Invoice_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fw1__Invoice_Discount_Amount__c</fullName>
        <label>Invoice Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Invoice_Discount_Percentage__c</fullName>
        <label>Invoice Discount Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Is_Stop_Collection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Is_Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Voided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Net_Amount__c</fullName>
        <formula>fw1__Total_Lines_Amount__c - fw1__Total_Invoice_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Number_of_Retries__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Retries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan</label>
        <referenceTo>fw1__Payment_Plan__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Pending_Auto_Bill_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Auto Bill Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Printed_Date__c</fullName>
        <inlineHelpText>This field cobtains the timestamp when this invoice was printed</inlineHelpText>
        <label>Printed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fw1__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fw1__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Recurring_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Invoice</label>
        <referenceTo>fw1__Recurring_Invoice__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw1__Reply_To_Email__c</fullName>
        <label>Reply To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fw1__Required_Down_Payment_Amount__c</fullName>
        <inlineHelpText>You can enter the required down payment amount here.</inlineHelpText>
        <label>Required Down Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Required_Down_Payment__c</fullName>
        <inlineHelpText>You can enter the required down payment percentage here.</inlineHelpText>
        <label>Required Down Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Retry_Date__c</fullName>
        <label>Retry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fw1__Revolving_Balance__c</fullName>
        <description>This field contains the SUM of balances coming from all unpaid invoices of the same recurring invoice</description>
        <label>Revolving Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_And_Handling__c</fullName>
        <inlineHelpText>Shipping And Handling Amount</inlineHelpText>
        <label>Shipping And Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Tax__c</fullName>
        <inlineHelpText>Tax Percentage</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fw1__Terms_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the customer has accepted the terms of the invoice.</inlineHelpText>
        <label>Terms Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fw1__Terms_And_Conditions_Link__c</fullName>
        <description>URL to your Terms And Conditions</description>
        <label>Terms And Conditions Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>fw1__Terms_And_Conditions__c</fullName>
        <label>Terms And Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fw1__Terms__c</fullName>
        <inlineHelpText>Days due from Invoice Date</inlineHelpText>
        <label>Terms</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Installment_Amount__c</fullName>
        <label>Total Installment Amount</label>
        <summarizedField>fw1__Installment__c.fw1__Installment_Amount__c</summarizedField>
        <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Invoice_Amount__c</fullName>
        <formula>ROUND(fw1__Revolving_Balance__c + 
fw1__Net_Amount__c + 
( fw1__Net_Amount__c  *  fw1__Tax__c ) +  
fw1__Shipping_And_Handling__c + 
((IF(fw1__Net_Amount__c &gt; fw1__Total_Non_Installment__c, 
     fw1__Net_Amount__c - fw1__Total_Non_Installment__c, 
     0))  *   fw1__Installment_Fee__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Invoice_Discount_Amount__c</fullName>
        <formula>( fw1__Total_Lines_Amount__c  *  fw1__Invoice_Discount_Percentage__c ) +  fw1__Invoice_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Invoice Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Lines_Amount__c</fullName>
        <label>Total Lines Amount</label>
        <summarizedField>fw1__Invoice_Line__c.fw1__Amount__c</summarizedField>
        <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Lines_Discount_Amount__c</fullName>
        <label>Total Lines Discount Amount</label>
        <summarizedField>fw1__Invoice_Line__c.fw1__Discount_Amount__c</summarizedField>
        <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Lines_Discount_Percentage__c</fullName>
        <label>Total Lines Discount Percentage</label>
        <summarizedField>fw1__Invoice_Line__c.fw1__Discount_Percentage__c</summarizedField>
        <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Lines_Discount_Quantity__c</fullName>
        <label>Total Lines Discount Quantity</label>
        <summarizedField>fw1__Invoice_Line__c.fw1__Discount_Quantity__c</summarizedField>
        <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Non_Installment__c</fullName>
        <label>Total Non-Installment</label>
        <summarizedField>fw1__Invoice_Line__c.fw1__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>fw1__Invoice_Line__c.fw1__Non_Installment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fw1__Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fw2__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fw2__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>Invoiced_This_week</fullName>
        <columns>NAME</columns>
        <columns>fw1__Account__c</columns>
        <columns>fw1__Invoice_Date__c</columns>
        <columns>fw2__Opportunity__c</columns>
        <columns>fw1__Net_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fw1__Invoice_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>fw1__Account__c</field>
            <operation>notContain</operation>
            <value>lisa murer</value>
        </filters>
        <label>Invoiced This week</label>
    </listViews>
    <listViews>
        <fullName>SF_Invoices_Not_Passed_to_GP</fullName>
        <columns>NAME</columns>
        <columns>fw1__Invoice_Date__c</columns>
        <columns>fw1__Account__c</columns>
        <columns>Passed_to_GP__c</columns>
        <columns>fw1__Total_Invoice_Amount__c</columns>
        <columns>fw1__Is_Voided__c</columns>
        <columns>Void_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Passed_to_GP__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>fw1__Is_Voided__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>fw1__Account__c</field>
            <operation>notContain</operation>
            <value>lisa murer</value>
        </filters>
        <filters>
            <field>fw1__Account__c</field>
            <operation>notEqual</operation>
            <value>King George</value>
        </filters>
        <label>SF Invoices Not Passed to GP</label>
        <sharedTo>
            <group>Sys_Admin</group>
            <role>Billing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>fw1__All</fullName>
        <columns>fw1__Account__c</columns>
        <columns>fw2__Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>fw1__Due_Date__c</columns>
        <columns>fw1__Balance_Due__c</columns>
        <columns>fw1__Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoices</label>
        <sharedTo>
            <group>Sys_Admin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Invoice</fullName>
        <active>true</active>
        <label>Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked_Invoice</fullName>
        <active>true</active>
        <label>Locked Invoice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Locked_Invoice</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Locked__c=TRUE,NOT(ISCHANGED(Locked__c)))</errorConditionFormula>
        <errorMessage>This record is closed and can&apos;t be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Void_Reason_Check</fullName>
        <active>true</active>
        <description>If the user voids the invoice, they should have a reason</description>
        <errorConditionFormula>AND (fw1__Is_Voided__c,
ISPICKVAL(Void_Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorMessage>Please include a void reason</errorMessage>
    </validationRules>
</CustomObject>